--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,32 @@ h3{
 .rating span{
     margin-right: 0.1rem;
 }
+.carousel-item-next, .carousel-item-prev, .carousel-item-active{
+    display:flex;
+}
+
+.carousel-caption{
+    position: absolute;
+    top:0;
+}
+
+.carousel-caption h2{
+    color:white;
+}
+
+.carousel img{
+    height:300px;
+    padding: 30px;
+    margin: auto;
+    margin-top:40px;
+    margin-bottom:40px;
+    border-radius: 50%;
+}
+
+.carousel a {
+    margin: 0 auto;
+}
+
+.carousel {
+    background-color: rgb(24, 24, 24);
+}
